@@ -207,7 +207,7 @@ Hol 1
 22,-0.001182,0.000000,0
 0.610000,12,4.490000,3.200000,4.490000,1,0.000000,0.990000
 0.001000,1,70.900002,1,19680.000000,0.390000
-0,1,0.000000,4,4.490000,12.000000,0.920000
+1,1,0.000000,4,4.490000,12.000000,0.920000
 0.600000,0.000000,0.000060,0.075000,5100.000000
 1.000000
 1.000000
@@ -940,9 +940,9 @@ JS 5
 11,0.002375,0.090000,1
 3,0.000176,0.990000,1
 22,-0.000317,0.000000,0
-0.610000,12,1.820000,3.200000,11.400000,1,0.000000,0.992188
+0.700000,12,1.820000,3.200000,11.400000,1,0.000000,0.992188
 0.001000,1,19.000000,1,19680.000000,0.400000
-0,1,86.599998,4,1.820000,32.000000,0.920000
+1,1,86.599998,4,1.820000,32.000000,0.920000
 0.600000,0.000000,0.000060,0.163000,5700.000000
 1.000000
 1.000000
