@@ -1453,7 +1453,7 @@ filename=fl_file_chooser("Bank Save:","(*"EXT")",hor->SavedBank,0);
 if (filename==NULL) return;
 filename=fl_filename_setext(filename,EXT);
 \#undef EXT
-hor->savebank(filename);} selected
+hor->savebank(filename);}
             xywh {0 0 100 20} labelsize 14 divider
           }
           MenuItem {} {
@@ -2159,11 +2159,11 @@ RtFile->value(filename);}
       label Synthesizer
       callback {Guarda_Pref(3);
 o->hide();}
-      xywh {1441 212 330 425} type Double hide
+      xywh {1441 212 330 445} type Double hide
     } {
       Fl_Box {} {
         label Drawbar
-        xywh {1 1 140 76} box PLASTIC_UP_BOX color 32 labelsize 13 align 17
+        xywh {1 1 140 76} box PLASTIC_UP_BOX color 32 labelsize 13 labelcolor 4 align 17
       }
       Fl_Dial D_attack {
         label Attack
@@ -2205,7 +2205,7 @@ Signal_for_Cb_Sliders = 0;
       }
       Fl_Box {} {
         label Percussion
-        xywh {140 1 95 76} box PLASTIC_UP_BOX color 32 labelsize 13 align 17
+        xywh {140 1 95 76} box PLASTIC_UP_BOX color 32 labelsize 13 labelcolor 4 align 17
       }
       Fl_Dial D_p_attack {
         label Attack
@@ -2238,7 +2238,7 @@ Signal_for_Cb_Sliders = 0;
       }
       Fl_Box {} {
         label Normalize
-        xywh {0 110 140 105} box PLASTIC_UP_BOX color 0 labelsize 13 align 17
+        xywh {0 110 140 105} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 17
       }
       Fl_Counter D_Freq {
         label Frequency
@@ -2258,7 +2258,7 @@ Actu();}
       }
       Fl_Box {} {
         label {F.Fine}
-        xywh {140 110 190 105} box PLASTIC_UP_BOX color 0 labelsize 13 align 17
+        xywh {140 110 190 105} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 17
       }
       Fl_Counter D_Freq_F {
         label Drawbar
@@ -2278,26 +2278,26 @@ Actu();}
       }
       Fl_Box {} {
         label {Rotary Amplitude}
-        xywh {0 270 170 55} box PLASTIC_UP_BOX color 0 labelsize 13 align 17
+        xywh {0 290 170 55} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 17
       }
       Fl_Counter D_Rot_Amp {
         label Amplitude
         callback {hor->a[0].Rotary_LFO_Amplitude=o->value();
 Actu();}
-        xywh {10 295 90 25} type Simple labelsize 9 align 8 when 4 minimum 100 maximum 14100 step 100 value 12800
+        xywh {10 315 90 25} type Simple labelsize 9 align 8 when 4 minimum 100 maximum 14100 step 100 value 12800
       }
       Fl_Box {} {
         label Transpose
-        xywh {170 270 160 55} box PLASTIC_UP_BOX color 0 labelsize 13 align 17
+        xywh {170 290 160 55} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 17
       }
       Fl_Counter D_O_Transpose {
         callback {hor->a[0].organ_transpose=(int)o->value();
 Actu();}
-        xywh {220 290 70 25} type Simple labelsize 9 align 8 when 4 minimum -36 maximum 24 step 1
+        xywh {215 315 70 25} type Simple labelsize 9 align 8 when 4 minimum -36 maximum 24 step 1
       }
       Fl_Box {} {
         label Click
-        xywh {235 1 95 76} box PLASTIC_UP_BOX color 32 labelsize 13 align 17
+        xywh {235 1 95 76} box PLASTIC_UP_BOX color 32 labelsize 13 labelcolor 4 align 17
       }
       Fl_Dial D_c_attack {
         label Attack
@@ -2327,13 +2327,13 @@ Signal_for_Cb_Sliders = 0;
       }
       Fl_Box {} {
         label Click
-        xywh {0 325 330 100} box PLASTIC_UP_BOX color 0 labelsize 13 align 17
+        xywh {0 345 330 100} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 17
       }
       Fl_Counter D_Click_Freq {
         label Frequency1
         callback {hor->a[0].Click_Freq=o->value();
 Actu();}
-        xywh {115 355 150 25} labelsize 9 align 8 when 4 minimum 10 maximum 20000 step 10 value 200
+        xywh {115 375 150 25} labelsize 9 align 8 when 4 minimum 10 maximum 20000 step 10 value 200
       }
       Fl_Dial D_Click_Vol {
         label {V.Attack}
@@ -2344,7 +2344,7 @@ if (Signal_for_Cb_Sliders == 1)
 Actu();
 Signal_for_Cb_Sliders = 0;
 }}
-        xywh {5 330 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 0.1
+        xywh {5 350 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 0.1
         class Rueda
       }
       Fl_Dial D_Click2_Vol {
@@ -2356,14 +2356,14 @@ if (Signal_for_Cb_Sliders == 1)
 Actu();
 Signal_for_Cb_Sliders = 0;
 }}
-        xywh {65 330 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 0.1
+        xywh {65 350 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 0.1
         class Rueda
       }
       Fl_Counter D_Click_Freq2 {
         label Frequency2
         callback {hor->a[0].Click_Freq2=o->value();
 Actu();}
-        xywh {115 390 150 25} labelsize 9 align 8 when 4 minimum 10 maximum 20000 step 10 value 6700
+        xywh {115 410 150 25} labelsize 9 align 8 when 4 minimum 10 maximum 20000 step 10 value 6700
       }
       Fl_Dial D_Click_Vol1 {
         label {V.Freq 1}
@@ -2374,7 +2374,7 @@ if (Signal_for_Cb_Sliders == 1)
 Actu();
 Signal_for_Cb_Sliders = 0;
 }}
-        xywh {5 375 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 1
+        xywh {5 395 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 1
         class Rueda
       }
       Fl_Dial D_Click_Vol2 {
@@ -2386,12 +2386,12 @@ if (Signal_for_Cb_Sliders == 1)
 Actu();
 Signal_for_Cb_Sliders = 0;
 }}
-        xywh {65 375 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 1
+        xywh {65 395 35 35} box OSHADOW_BOX labelsize 9 step 0.01 value 1
         class Rueda
       }
       Fl_Box {} {
         label {Wave Type}
-        xywh {0 215 330 55} box PLASTIC_UP_BOX color 0 labelsize 13 align 17
+        xywh {0 215 230 75} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 17
       }
       Fl_Counter D_Wave_Type {
         label Drawbar
@@ -2401,13 +2401,23 @@ char temp[32];
 bzero(temp,sizeof(temp));
 sprintf(temp,"Drawbar %d",(int)o->value());
 Saca->copy_label(temp);}
-        xywh {5 235 70 25} type Simple labelsize 9 align 8 minimum 1 maximum 10 step 1 value 1
+        xywh {5 245 70 25} type Simple labelsize 9 align 8 minimum 1 maximum 10 step 1 value 1
       }
       Fl_Counter D_Wave_Type_Val {
         label Wave
         callback {hor->a[0].Operator[(int)D_Wave_Type->value()].wave=(int)o->value();
 Actu();}
-        xywh {205 235 70 25} type Simple labelsize 9 align 8 when 4 minimum 1 maximum 4 step 1 value 1
+        xywh {125 245 70 25} type Simple labelsize 9 align 8 when 4 minimum 1 maximum 4 step 1 value 1
+      }
+      Fl_Box {} {
+        label {Keyboard Scaling}
+        xywh {230 215 100 75} box PLASTIC_UP_BOX color 0 labelsize 13 labelcolor 4 align 145
+      }
+      Fl_Button D_KeybS {
+        label On
+        callback {hor->a[0].scaling=o->value();
+Actu();}
+        xywh {255 260 55 25} type Toggle box PLASTIC_UP_BOX selection_color 3 labelsize 12
       }
     }
   }
@@ -3193,7 +3203,9 @@ D_Click_Freq->value(hor->a[0].Click_Freq);
 D_Click_Freq2->value(hor->a[0].Click_Freq2);
 D_Click_Vol1->value(hor->a[0].Click_Vol1);
 D_Click_Vol2->value(hor->a[0].Click_Vol2);
-D_Wave_Type_Val->value(hor->a[0].Operator[(int)D_Wave_Type->value()].wave);} {}
+D_Wave_Type_Val->value(hor->a[0].Operator[(int)D_Wave_Type->value()].wave);
+D_KeybS->value(hor->a[0].scaling);} {selected
+    }
   }
   Function {put_icon(Fl_Window* window)} {} {
     code {if (hints == NULL)
