@@ -107,6 +107,7 @@ HOR::midievents (int keIN)
 		  LastMidiInLevel = MidiInLevel;
 		  MidiInLevel = midievent->data.note.velocity;
 		  velocity[l1] = midievent->data.note.velocity /126.0;
+                  if (a[0].scaling) velocity[l1]=Get_Keyb_Level_Scaling(l1);
                   if (velocity[l1] > 1.0) velocity[l1]=1.0;
 		  if ((split) && (rnote[l1] < 60))
 		    {
@@ -259,3 +260,5 @@ HOR::disconectaaconnect()
 
 
 };
+
+
